Fix gap

--- a/source/sass/blocks/form-group.scss
+++ b/source/sass/blocks/form-group.scss
@@ -18,7 +18,6 @@
   width: 260px;
   display: flex;
   align-items: center;
-  gap: 20px;
   padding: 18px 0;
   font-size: 17px;
   line-height: 16px;
@@ -37,6 +36,7 @@
       content: "";
       flex-grow: 1;
       border-bottom: 1px solid $primary-550;
+      margin-left: 20px;
     }
   }
 }
